# /Users/geoffreygarrett/Repositories/nsri-link/packages/keyflux/Cargo. toml

[workspace]
members = [
    "macros",
    "curl",
    "common",
    "core",
    "postgres",
    "cli", "template", "playground",
]


resolver = "2"



# Optionally, specify some default features
#default = ["curl", "macro"]
