[package]
name = "keyflux_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
keyflux = { path = "../core" }
keyflux_macros = { path = "../macros" }
keyflux_common = { path = "../common" }
serde_json = "1.0.120"
handlebars = "5.1.2"
env_logger = "0.11.3"
clap = { version = "4.5.7" }
clap_complete = "4.5.6"
log = "0.4.22"
rust-i18n = "3.0.1"
lazy_static = "1.5.0"
tokio = { version = "1.38.0", features = ["full"] }
sodiumoxide = "0.2.7"
regex = "1.10.5"
prettytable = "0.10"

[[bin]]
name = "keyflux"
path = "src/main.rs"