[package]
name = "keyflux_common"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu = { version = "0.8.3", features = ["rust_1_61", "futures"] }
keyflux_macros = { path = "../macros" }
keyflux_template = { path = "../template" }
serde = { version = "1.0.203", features = ["derive"] }
typetag = "0.2.16"
serde_json = "1.0.120"
reqwest = "0.12.5"
anyhow = "1.0.86"
futures = "0.3.30"
async-trait = "0.1.80"
mashup = "0.1"
tokio = "1.38.0"
log = "0.4.22"

base64 = "0.22.1"
handlebars = { version = "5.1.2" }
sodiumoxide = "0.2.7"
sqlx = { version = "0.7.4", features = ["postgres", "uuid"] }
regex = "1.10.5"
