[package]
name = "keyflux_curl"
version = "0.1.0"
edition = "2021"
#
#[features]
#default = ["reqwest"]
#reqwest = ["dep:reqwest"]

[features]
default = ["reqwest_support", "handlebars_support", "json_support"]
reqwest_support = ["reqwest"]
handlebars_support = ["keyflux_template"]
json_support = ["serde_json"]

[dependencies]
keyflux_template = { path = "../template", optional = true }
base64 = "0.22.1"
form_urlencoded = "1"
http = "1.1.0"
minijinja = { version = "2.0.2", features = ["loader", "speedups"] }
pest = "2"
pest_derive = "2"

serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8.3", features = ["rust_1_61"] }
log = "0.4.21"
url = "2.5.2"
urlencoding = "2.1.3"
serde_json = {version = "1.0.118",features = ["preserve_order"], optional = true}
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
handlebars = { version = "5.1.2", optional = true }
regex = "1.10.5"
lazy_static = "1.5.0"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6.0"
