[package]
name = "keyflux_curl"
version = "0.1.0"
edition = "2021"
#
#[features]
#default = ["reqwest"]
#reqwest = ["dep:reqwest"]

[features]
default = []
reqwest_support = ["reqwest"]

[dependencies]
base64 = "0.22.1"
form_urlencoded = "1"
http = "1.1.0"
minijinja = { version = "1.0.21", features = ["loader", "speedups"] }
pest = "2"
pest_derive = "2"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8.3", features = ["rust_1_61"] }
log = "0.4.21"
url = "2.5.2"
urlencoding = "2.1.3"

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

