# keyflux_macros/Cargo.toml
[package]
name = "keyflux_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.68", features = ["parsing", "printing", "extra-traits", "full"] }
darling = "0.20.9"
quote = "1.0"
proc-macro2 = "1.0"
deluxe = "0.5.0"
mockall = "0.12.1"
reqwest = "0.12.5"
convert_case = "0.6.0"
keyflux_template = { path = "../template" }
keyflux_curl = { path = "../curl" }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full", "test-util"] }
http = "1.1.0"
pest = "2.7.10"
snafu = { version = "0.8.3", features = ["rust_1_61"] }
async-trait = "0.1.80"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
keyflux_common = { path = "../common" }
keyflux_template = { path = "../template" }
#keyflux_traits = { path = "../traits" }
trybuild = "1.0.25"
reqwest = "0.12.5"