[package]
name = "playground"
version = "0.1.0"
edition = "2021"


[dependencies]
keyflux_macros = { path = "../macros" }
keyflux_common = { path = "../common" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
schemafy = "0.6.0"
schemafy_core = "0.6.0"
schemafy_lib = "0.6.0"