[package]
name = "keyflux_template"
version = "0.1.0"
edition = "2021"

[dependencies]
urlencoding = "2.1.3"
base64 = "0.22.1"
handlebars = { version = "5.1.2" }
sodiumoxide = "0.2.7"
serde_json = "1.0.118"
regex = "1.10.5"
schemafy_lib = "0.6.0"
syn = "2.0.68"
proc-macro2 = "1.0.86"
prettyplease = "0.2.20"

[dev-dependencies]
