[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.38.0"
prettyplease = "0.2.20"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "2.0.69"


[build-dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream", "blocking"] }
prettyplease = "0.2.20"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "2.0.69"
tokio = { version = "1.38", features = ["full"] }
